fixed page width bug on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,8 @@
 		padding: 20px;
 		padding-top: 280px;
 		margin: auto;
-		max-width: 1000px;
+		max-width: 100vw;
+		box-sizing: border-box;
 		a.anchor {
 			display: block;
 			position: relative;
